# wenzi

./: .gitignore  CMakeLists.txt  README.md  architecture_propose.md
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/include/wenzi/core/: document.h  document_io.h  layout.h
core/src/: document.cpp  document_io.cpp  layout.cpp
core/tests/: document_test.cpp
ui/: CMakeLists.txt
ui/include/wenzi/ui/: application_mac.h
ui/src/: application_mac.mm
